Fixed bug #79862

While normally a private property in the active scope would take
priority, we should not use this if it has the wrong "staticness".